--- a/app/src/main/res/layout/fragment_tela_formulario.xml
+++ b/app/src/main/res/layout/fragment_tela_formulario.xml
@@ -97,8 +97,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:hint="Melhor horário para preencher o diário"
-                android:layout_alignRight="@+id/textView19"
-                android:layout_alignEnd="@+id/textView19"/>
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
 
             <Button
                 android:layout_width="wrap_content"
