--- a/app/src/main/res/layout/fragment_tela_respostas.xml
+++ b/app/src/main/res/layout/fragment_tela_respostas.xml
@@ -35,7 +35,7 @@
                 android:measureWithLargestChild="false"
                 android:layout_alignWithParentIfMissing="false"
                 android:background="@color/white"
-                android:id="@+id/radioGroup"
+                android:id="@+id/radioGroup2"
                 android:layout_below="@+id/textView7"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true">
@@ -514,7 +514,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="2 - Intensidade da dor: (Considere a dor que mais te oncomoda)"
+                android:text="2 - Intensidade da dor: (Considere a dor que mais te incomoda)"
                 android:id="@+id/textView7"
                 android:textSize="12sp"
                 android:layout_below="@+id/textView6"
@@ -530,7 +530,7 @@
                 android:id="@+id/textView8"
                 android:textColor="#00ff00"
                 android:background="@color/white"
-                android:layout_below="@+id/radioGroup"
+                android:layout_below="@+id/radioGroup2"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
 
@@ -542,9 +542,9 @@
                 android:id="@+id/textView21"
                 android:textColor="#FF0000"
                 android:background="@color/white"
-                android:layout_below="@+id/radioGroup"
-                android:layout_alignRight="@+id/radioGroup"
-                android:layout_alignEnd="@+id/radioGroup"/>
+                android:layout_below="@+id/radioGroup2"
+                android:layout_alignRight="@+id/radioGroup2"
+                android:layout_alignEnd="@+id/radioGroup2"/>
 
             <TextView
                 android:layout_width="wrap_content"
