--- a/app/src/main/res/layout/fragment_tela_formulario.xml
+++ b/app/src/main/res/layout/fragment_tela_formulario.xml
@@ -105,8 +105,19 @@
                 android:layout_height="wrap_content"
                 android:text="Gravar"
                 android:id="@+id/buttonGravar"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/editTextEmail"
                 android:layout_centerHorizontal="true"/>
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editTextEmail"
+                android:layout_below="@+id/editTextMelhorHorario"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:hint="E-mail do médico"/>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
